@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+drkns 2025-04-22 21:28:12+01:00 - build 6467
+
+1. Fix replace in far:regex.
+
+2. Refactoring.
+
+--------------------------------------------------------------------------------
 drkns 2025-04-22 02:04:56+01:00 - build 6466
 
 1. far:regex: selecting matches in the list selects the corresponding part of the test string.
